Bug 357902 - txt-file syntax-highlighted as "diff"-file on save
Summary: txt-file syntax-highlighted as "diff"-file on save
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: 16.04.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-12 21:27 UTC by H.H.
Modified: 2016-09-05 21:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
this is highlighted as diff file on save (82 bytes, text/plain)
2016-06-30 16:00 UTC, H.H.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2016-01-12 21:27:28 UTC
kwrite-version: 15.08.2

I have a txt-File with some notices (and some more "-" for numerations at line beginnings).
When I open this file, edit it, and save it, it is suddenly syntax-highlighted wrong in "diff"-file-mode.

I found no option to deactivate this wrong behaviour?

Reproducible: Always
Comment 1 Buovjaga 2016-06-30 15:36:08 UTC
Could you attach an example file?
Comment 2 H.H. 2016-06-30 16:00:21 UTC
Created attachment 99771 [details]
this is highlighted as diff file on save
Comment 3 Buovjaga 2016-06-30 16:29:23 UTC
Blimey, you are right.

Arch Linux 64-bit
Kate 16.04.2
KDE Frameworks 5.23.0
Qt 5.7
xcb wm
Comment 4 Christoph Cullmann 2016-09-05 21:12:08 UTC
Git commit 43e478ec087c26bb0c1e31a95f2ef7fa98530811 by Christoph Cullmann.
Committed on 05/09/2016 at 21:08.
Pushed by cullmann into branch 'master'.

improve mime-type detection

M  +16   -32   src/document/katedocument.cpp
M  +2    -12   src/document/katedocument.h
M  +5    -7    src/mode/katemodemanager.cpp

http://commits.kde.org/ktexteditor/43e478ec087c26bb0c1e31a95f2ef7fa98530811