improve mime-type detection

BUG: 357902